style: fix spacing on carousel

--- a/src/components/Carousel/styles.module.css
+++ b/src/components/Carousel/styles.module.css
@@ -1,5 +1,5 @@
 .carousel-dimensions {
-  height: 100vh;
+  height: 116vh;
   width: 100%;
 }
 
